# fastapi-metrics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: in_memory.py  redis.py  sqlite.py
examples/in_memory/: main.py
fastapi_metrics/: __init__.py  logger.py  middleware.py  router.py  utils.py
fastapi_metrics/backends/: __init__.py  base.py  in_memory.py  redis.py  sqlite.py
fastapi_metrics/static/frontend/: index.html  main.js
fastapi_metrics_dashboard/: __init__.py  config.py  decorator.py  logger.py  middleware.py  router.py  store.py  utils.py
fastapi_metrics_dashboard/backends/: __init__.py  base.py  in_memory.py  redis.py  sqlite.py
fastapi_metrics_dashboard/static/frontend/: index.html  main.js
tests/: test_middleware.py
